# s9y-to-drupal

./: .env.example  .gitignore  README.md  TODO  pyproject.toml
src/: main.py
src/export-import/: article.py  dbtools.py  main.py
src/migrator/: __init__.py
src/migrator/data/: __init__.py  article.py
src/migrator/exporter/: __init__.py  dbtools.py
src/migrator/importer/: __init__.py  drupalapi.py
