[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
sources = ["src"]

[project]
name = "s9y-export-dupral-import"
version = "0.0.1"
description = "A package for exporting s9y database entries and imports them (via REST API) to dupral."
authors = [
  { name = "Andreas Bilke", email = "andreas@bilke.org" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "dotenv",
    "psycopg"
]
