[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
sources = ["src"]

[project]
name = "s9y-dupral-migrator"
version = "0.0.1"
description = "A package for exporting s9y articles from db dump and imports them (via API) to dupral."
readme = "README.md"
authors = [
  { name = "Andreas Bilke", email = "andreas@bilke.org" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "dotenv",
    "psycopg>=3",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/AndreasBilke/s9y-to-drupal"
"Bug Tracker" = "https://github.com/AndreasBilke/s9y-to-drupal/issues"
